RD-2009-03-17-0: Enhancem.:  Added test for exclusive complex
                 Review:     AA

LP-2009-03-17-0: Bugfix:     Added -no-jmx flag for GE 6.2 when no JMX port
                 Review:     TBD

EB-2009-03-16-0: Enhancent.: Added additional JSV test and fixed test
                             that checks qsub -c in combination with JSV
                 Review:     MD

CR-2009-03-16-0: Bugfix:     new fix for not equal behaviour of find output
                             on all platforms for the helper script
                             scripts/analyze_dir.sh
                 Review:     TB

MG-2009-03-14-0: Bugfix:     fix for broken file_permission_test
                 Review:     

DG-2009-03-13-0: Enhancem.:  Added test for issue 2952
                 Review:     JG

CR-2009-03-13-0: Bugfix:     fixed wrong timing in was_job_running()
                 Belongs To: CR-2009-03-12-0
                 Review:     ??

MG-2009-03-12-0: Bugfix:     file_permission_test adjusted for hedeby issue 584
                             fix for more than one reporter file
                 Review:     MB

CR-2009-03-12-2: Bugfix:     fixed new verified test "project_access_lists"
                             for ge versions >= 62
                 Review:     MD

CR-2009-03-12-1: Cleanup:    removed "antique" global sge_config variable
                             and re-adjusted locations where it was used
                 Review:     AA

CR-2009-03-12-0: Cleanup:    cleanup of misc. testsuite tests and procedures
                 Review:     DG

RH-2009-03-11-0: Bugfix:     get_spooled_jobs used wrong qmaster_spool_dir if
                             different spooling method for multiple clusters 
                             were used
                 Review:     CR

RH-2009-03-09-0: Bugfix:     Hedeby: CS port for dummy execution env must not 
                             be hard coded
                 Issue:      Hedeby 261
                 Review:     AF
